unpackaged/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>AI_Match_Score__c</fullName>
        <label>AI Match Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AI_Skills_Matched__c</fullName>
        <label>AI Skills Matched</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AI_Skills_Missing__c</fullName>
        <label>AI Skills Missing</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AI_Summary__c</fullName>
        <label>AI Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Requisition__c</fullName>
        <label>Job Requisition</label>
        <referenceTo>Job_Requisition__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>AI Screening Completed</fullName>
                </value>
                <value>
                    <fullName>AI Screening Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Top_Applications</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>AI_Match_Score__c</columns>
        <columns>AI_Skills_Matched__c</columns>
        <columns>AI_Skills_Missing__c</columns>
        <columns>AI_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>Top Applications</label>
    </listViews>
    <nameField>
        <displayFormat>Application-{00000}</displayFormat>
        <label>Application  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>